unpackaged/objects/copado__User_Story_Selenium_Test__c.object
<CustomObject>
	<fields>
		<fullName>copado__External_Id__c</fullName>
		<description>External Id for the User Story Selenium Test Manager.</description>
		<externalId>true</externalId>
		<label>External Id</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Group__c</fullName>
		<label>Selenium Test Group</label>
		<referenceTo>copado__Selenium_Test_Group__c</referenceTo>
		<relationshipLabel>User Story Selenium Tests</relationshipLabel>
		<relationshipName>User_Story_Selenium_Tests</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>User Story Selenium Tests</relationshipLabel>
		<relationshipName>User_Story_Selenium_Tests</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>User Story Selenium Test</label>
	<nameField>
		<label>User Story Selenium Test Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>User Story Selenium Tests</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>